--- a/docker-services/paperless/compose.yml
+++ b/docker-services/paperless/compose.yml
@@ -24,6 +24,11 @@
 #
 # For more extensive installation and update instructions, refer to the
 # documentation.
+
+name: paperless
+include:
+  - ../networks.yml
+
 services:
   broker:
     image: docker.io/library/redis:8
@@ -40,7 +45,7 @@ services:
       POSTGRES_USER: paperless
       POSTGRES_PASSWORD: paperless
   webserver:
-    image: ghcr.io/paperless-ngx/paperless-ngx:latest
+    image: ghcr.io/paperless-ngx/paperless-ngx:2.19.4
     restart: unless-stopped
     depends_on:
       - db
@@ -52,7 +57,8 @@ services:
       - media:/usr/src/paperless/media
       - /swintronics-data/volumes/paperless/export:/usr/src/paperless/export
       - /swintronics-data/volumes/paperless/consume:/usr/src/paperless/consume
-    env_file: docker-compose.env
+    env_file: 
+      - docker-compose.env
     environment:
       PAPERLESS_REDIS: redis://broker:6379
       PAPERLESS_DBHOST: db
