Update prometheus to scrape immich

--- a/docker-services/monitoring/config/prometheus.yml
+++ b/docker-services/monitoring/config/prometheus.yml
@@ -29,3 +29,10 @@ scrape_configs:
       - targets:
         - tailscale:9002
 
+  - job_name: immich_api
+    static_configs:
+      - targets: ['immich-server:8081']
+
+  - job_name: immich_microservices
+    static_configs:
+      - targets: ['immich-server:8082']
